<resources>
    <string name="app_name">CustomerCare</string>
    <string name="action_settings">Configurações</string>
    <string name="title_activity_main_menu">Customer Care</string>
    <string name="edit_login">nome de usuário</string>
    <string name="edit_senha">senha</string>
    <string name="button_logar">GO</string>
    <string name="button_cad">Cadastre-se</string>
    <string name="button_ajuda">Ajuda?</string>
    <string name="txtListMetricaProprietario">Propietário: </string>
    <string name="txtListMetricaNome">Nome da métrica: </string>
    <string name="txtListMetricaMeta">Nome da meta: </string>
    <string name="txtListMetricaTipo">Tipo de registro: </string>
    <string name="btnMetricaInsert">Inserir</string>
    <string name="txtInsMetricaTitleProgress">Progresso de métrica</string>
    <string name="edtInsMetricaNome">Nome</string>
    <string name="edtInsMetricaDataInicio">Data inicio</string>
    <string name="edtInsMetricaDataVencimento">Data vencimento</string>
    <string name="edtInsMetricaValorAtual">Valor atual</string>
    <string name="edtInsMetricaValorInicial">Valor inicial</string>
    <string name="edtInsMetricaValorDestino">Valor de destino</string>
    <string name="edtInsMetricaComentario">Comentário</string>
    <string name="edtInsMetricaDescricao">Descrição</string>
    <string name="btnInsMetricaInsert">Inserir</string>
    <string name="txtUpdMetricaTitleProgress">Progresso de métrica</string>
    <string name="edtUpdMetricaNome">Nome</string>
    <string name="edtUpdMetricaDataInicio">Data inicio</string>
    <string name="edtUpdMetricaDataVencimento">Data vencimento</string>
    <string name="edtUpdMetricaValorAtual">Valor atual</string>
    <string name="edtUpdMetricaValorInicial">Valor inicial</string>
    <string name="edtUpdMetricaValorDestino">Valor de destino</string>
    <string name="edtUpdMetricaComentario">Comentário</string>
    <string name="edtUpdMetricaDescricao">Descrição</string>
    <string name="btnUpdMetricaInsert">Atualizar</string>
    <string name="txtViewMetricaTipo">Tipo do registro:</string>
    <string name="txtViewMetricaStatus">Status:</string>
    <string name="txtViewMetricaNome">Nome:</string>
    <string name="txtViewMetricaOwnerMeta">Responsável pela meta:</string>
    <string name="txtViewMetricaMeta">Meta:</string>
    <string name="txtViewMetricaProgresso">Progresso:</string>
    <string name="txtViewMetricaDataInicio">Data inicio:</string>
    <string name="txtViewMetricaDataVencimento">Data vencimento:</string>
    <string name="txtViewMetricaValorAtual">Valor atual:</string>
    <string name="txtViewMetricaTitleProgress">Progresso de métrica</string>
    <string name="txtViewMetricaValorInicial">Valor inicial:</string>
    <string name="txtViewMetricaValorDestino">Valor de destino:</string>
    <string name="txtViewMetricaComentario">Comentário:</string>
    <string name="txtViewMetricaDescricao">Descrição:</string>
    <string name="btnViewMetricaExcluir">Excluir</string>
    <string name="btnViewMetricaAtualizar">Atualizar</string>
    <string name="txtListCampanhaProprietario">Proprietário: </string>
    <string name="txtListCampanhaNome">Nome da camapanha: </string>
    <string name="txtListCampanhaTipo">Tipo da campanha: </string>
    <string name="txtListCampanhaStatus">Status: </string>
    <string name="txtViewCampanhaProprietario">Proprietário: </string>
    <string name="txtViewCampanhaNome">Nome: </string>
    <string name="txtViewCampanhaAtivo">Ativo?: </string>
    <string name="txtViewCampanhaTipo">Tipo: </string>
    <string name="txtViewCampanhaStatus">Status: </string>
    <string name="txtViewCampanhaDataInicio">Data de início: </string>
    <string name="txtViewCampanhaDataTermino">Data de término: </string>
    <string name="txtViewCampanhaReceitaEsperada">Receita esperada: </string>
    <string name="txtViewCampanhaCustoEstimado">Custo estimado: </string>
    <string name="txtViewCampanhaCustoReal">Custo real: </string>
    <string name="txtViewCampanhaRespostaEsperada">Resposta esperada: </string>
    <string name="txtViewCampanhaPai">Campanha pai: </string>
    <string name="txtViewCampanhaTotalLeads">Total de leads: </string>
    <string name="txtViewCampanhaTotalLeadsConvertidos">Total de leads convertidos: </string>
    <string name="txtViewCampanhaTotalContatos">Total de contatos: </string>
    <string name="txtViewCampanhaValorTotalOportunidades">Valor total de oportunidades: </string>
    <string name="txtViewCampanhaValorTotalOportunidadesGanhas">Valor total de oportunidades ganhas: </string>
    <string name="btnTarefaInserir">Inserir</string>
    <string name="txtListTarefaProprietario">Atribuído a: </string>
    <string name="txtListTarefaAssunto">Assunto: </string>
    <string name="txtListTarefaDataVencimento">Data de vencimento: </string>
    <string name="txtListTarefaStatus">Status: </string>
    <string name="edtInsTarefaAssunto">Assunto</string>
    <string name="edtInsTarefaDataVencimento">Data de Vencimento</string>
    <string name="edtInsTarefaComentarios">Comentários</string>
    <string name="btnInsTarefaInsert">Inserir</string>
    <string name="txtViewTarefaProprietario">Atribuído a: </string>
    <string name="txtViewTarefaAssunto">Assunto: </string>
    <string name="txtViewTarefaDataVencimento">Data de vencimento: </string>
    <string name="txtViewTarefaPrioridade">Prioridade: </string>
    <string name="txtViewTarefaStatus">Status: </string>
    <string name="txtViewTarefaNome">Nome: </string>
    <string name="txtViewTarefaRelativo">Relativo à: </string>
    <string name="txtViewTarefaComentario">Comentário: </string>
    <string name="btnViewTarefaExcluir">Excluir</string>
    <string name="btnViewTarefaAtualizar">Atualizar</string>
    <string name="edtUpdTarefaAssunto">Assunto</string>
    <string name="edtUpdTarefaDataVencimento">Data de vencimento</string>
    <string name="edtUpdTarefaComentarios">Comentários</string>
    <string name="btnUpdTarefaUpdate">Atualizar</string>
    <string name="btnOportunidadeInserir">Inserir</string>
    <string name="txtListOportunidadeNome">Nome: </string>
    <string name="txtListOportunidadeConta">Conta: </string>
    <string name="txtListOportunidadeDataFechamento">Fechamento: </string>
    <string name="txtListOportunidadeFase">Fase: </string>
    <string name="edtInsOportunidadeNome">Nome </string>
    <string name="edtInsOportunidadeValor">Valor ($) </string>
    <string name="edtInsOportunidadeDataFechamento">Data de fechamento </string>
    <string name="edtInsOportunidadeProxEtapa">Proxima Etapa </string>
    <string name="edtInsOportunidadeProbabilidade">Probabilidade </string>
    <string name="btnInsOportunidadeInsert">Inserir </string>
    <string name="txtViewOportunidadeNome">Nome: </string>
    <string name="txtViewOportunidadeConta">Conta: </string>
    <string name="txtViewOportunidadeTipo">Tipo: </string>
    <string name="txtViewOportunidadeLead">Origem do Lead: </string>
    <string name="txtViewOportunidadeValor">Valor: </string>
    <string name="txtViewOportunidadeDataFechamento">Data de fechamento: </string>
    <string name="txtViewOportunidadeProxEtapa">Próxima etapa: </string>
    <string name="txtViewOportunidadeFase">Fase: </string>
    <string name="txtViewOportunidadeProbabilidade">Probabilidade (%): </string>
    <string name="txtViewOportunidadeCampanha">Origem da campanha principal: </string>
    <string name="btnViewOportunidadeExcluir">Excluir</string>
    <string name="btnViewOportunidadeAtualizar">Atualizar</string>
    <string name="edtUpdOportunidadeNome">Nome </string>
    <string name="edtUpdOportunidadeValor">Valor ($) </string>
    <string name="edtUpdOportunidadeDataFechamento">Data de fechamento </string>
    <string name="edtUpdOportunidadeProxEtapa">Proxima etapa </string>
    <string name="edtUpdOportunidadeProbabilidade">Probabilidade </string>
    <string name="btnUpdOportunidadeUpdate">Atualizar </string>
    <string name="edtInsContaNome">Nome</string>
    <string name="edtInsContaTelefone">Telefone</string>
    <string name="edtInsContaSetor">Setor</string>
    <string name="edtInsContaOrigem">Origem</string>
    <string name="edtInsContaReceita">Receita</string>
    <string name="edtInsContaFuncionarios">Funcionários</string>
    <string name="edtInsContaEndereco">Endereço de cobrança</string>
    <string name="btnInsContaInsert">Cadastrar conta</string>
    <string name="txtViewContaPropietario">Propietario: </string>
    <string name="txtViewContaNome">Nome: </string>
    <string name="txtViewContaClassificao">Classificação: </string>
    <string name="txtViewContaOrigem">Origem: </string>
    <string name="txtViewContaTelefone">Telefone: </string>
    <string name="txtViewContaSetor">Setor: </string>
    <string name="txtViewContaTipo">Tipo: </string>
    <string name="txtViewContaReceita">Receita anual: </string>
    <string name="txtViewContaFuncionarios">Funcionários: </string>
    <string name="txtViewContaEndereco">Endereço: </string>
    <string name="btnViewContaExcluir">Excluir</string>
    <string name="btnViewContaAtualizar">Atualizar</string>
    <string name="edtUpdContaNome">Nome</string>
    <string name="edtUpdContaTelefone">Telefone</string>
    <string name="edtUpdContaSetor">Setor</string>
    <string name="edtUpdContaOrigem">Origem</string>
    <string name="edtUpdContaReceita">Receita</string>
    <string name="edtUpdContaFuncionarios">Funcionarios</string>
    <string name="edtInsLeadNome">Nome</string>
    <string name="edtInsLeadSobrenome">Sobrenome</string>
    <string name="edtInsLeadEmpresa">Empresa</string>
    <string name="edtInsLeadOrigem">Origem</string>
    <string name="edtInsLeadSetor">Setor</string>
    <string name="edtInsLeadReceita">Receita</string>
    <string name="edtInsLeadTelefone">Telefone</string>
    <string name="edtInsLeadEmail">Email</string>
    <string name="edtInsLeadFuncionarios">Funcionários</string>
    <string name="edtInsLeadEndereco">Endereço</string>
    <string name="btnInsLeadInsert">Cadastrar lead</string>
    <string name="edtUpdLeadNome">Nome</string>
    <string name="edtUpdLeadSobrenome">Sobrenome</string>
    <string name="edtUpdLeadEmpresa">Empresa</string>
    <string name="edtUpdLeadOrigem">Origem</string>
    <string name="edtUpdLeadSetor">Setor</string>
    <string name="edtUpdLeadReceita">Receita</string>
    <string name="edtUpdLeadTelefone">Telefone</string>
    <string name="edtUpdLeadEmail">Email</string>
    <string name="edtUpdLeadFuncionarios">Funcionários</string>
    <string name="edtUpdLeadEndereco">Endereço</string>
    <string name="btnUpdLeadUpdate">Atualizar</string>
    <string name="txtListContatoNome">Nome do contato</string>
    <string name="txtListContatoConta">Conta</string>
    <string name="txtListContatoTelefone">Telefone</string>
    <string name="edtInsContatoNome">Primeiro nome</string>
    <string name="edtInsContatoSobrenome">Sobrenome</string>
    <string name="edtInsContatoConta">Conta</string>
    <string name="edtInsContatoTelefone">Telefone</string>
    <string name="edtInsContatoCelular">Celular</string>
    <string name="edtInsContatoEmail">Email</string>
    <string name="edtInsContatoTitulo">Titulo</string>
    <string name="btnInsContatoInserir">Cadastrar contato</string>
        <string name="button_lead">Leads</string>
        <string name="button_conta">Conta</string>
        <string name="button_contato">Contato</string>
        <string name="button_oportunidade">Oportunidade</string>
        <string name="button_campanha">Campanha</string>
        <string name="button_metas">Metas</string>
        <string name="button_vendas">Vendas</string>
        <string name="button_tarefas">Tarefas</string>
        <string name="button_visitas">Visitas</string>
        <string name="button_logout">Logout</string>
    <string name="status_lead">Status</string>
    <string name="temperatura_lead">Temperatura</string>
</resources>