<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.controller.InsertContasActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:id="@+id/linearLayoutInsContas">
        <EditText
            android:id="@+id/edtInsContaNome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/edtInsContaNome"
            android:layout_gravity="left"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spiInsContaClassificacao"
            android:spinnerMode="dialog"/>

        <EditText
            android:id="@+id/edtInsContaOrigem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/edtInsContaOrigem"
            android:layout_gravity="left"/>

        <EditText
            android:id="@+id/edtInsContaTelefone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/edtInsContaTelefone"
            android:inputType="number"
            android:layout_gravity="left"/>

        <EditText
            android:id="@+id/edtInsContaSetor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/edtInsContaSetor"
            android:layout_gravity="left"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spiInsContaTipo"
            android:spinnerMode="dialog"/>

        <EditText
            android:id="@+id/edtInsContaReceita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/edtInsContaReceita"
            android:inputType="numberDecimal"
            android:layout_gravity="left"/>

        <EditText
            android:id="@+id/edtInsContaFuncionarios"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/edtInsContaFuncionarios"
            android:inputType="number"
            android:layout_gravity="left"/>

        <EditText
            android:id="@+id/edtInsContaEndereco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/edtInsContaEndereco"
            android:layout_gravity="left"/>

        <Button
            android:id="@+id/btnInsContaInsert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnInsContaInsert"
            android:onClick="InsertConta"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>
</ScrollView>
