<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="br.customercare.tcc.view.controller.UpdateLeadActivity">
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        >
        <EditText
            android:id="@+id/edtUpdLeadNome"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/edtUpdLeadNome"
            android:layout_gravity="left"/>

        <EditText
            android:id="@+id/edtUpdLeadSobrenome"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/edtUpdLeadSobrenome"
            android:layout_gravity="left"/>

        <EditText
            android:id="@+id/edtUpdLeadEmpresa"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/edtUpdLeadEmpresa"
            android:layout_gravity="left"/>

        <EditText
            android:id="@+id/edtUpdLeadOrigem"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/edtUpdLeadOrigem"
            android:layout_gravity="left"/>

        <EditText
            android:id="@+id/edtUpdLeadSetor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/edtUpdLeadSetor"
            android:layout_gravity="left"/>

        <EditText
            android:id="@+id/edtUpdLeadReceita"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/edtUpdLeadReceita"
            android:inputType="numberDecimal"
            android:layout_gravity="left"/>

        <EditText
            android:id="@+id/edtUpdLeadTelefone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/edtUpdLeadTelefone"
            android:inputType="number"
            android:layout_gravity="left"/>

        <EditText
            android:id="@+id/edtUpdLeadEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/edtUpdLeadEmail"
            android:layout_gravity="left"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Status"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spiUpdLeadStatus"
            android:spinnerMode="dialog"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Classificação"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spiUpdLeadClassificacao"
            android:spinnerMode="dialog"/>

        <EditText
            android:id="@+id/edtUpdLeadFuncionarios"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/edtUpdLeadFuncionarios"
            android:inputType="number"
            android:layout_gravity="left"/>

        <EditText
            android:id="@+id/edtUpdLeadEndereco"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/edtUpdLeadEndereco"
            android:layout_gravity="left"/>


        <Button
            android:id="@+id/btnUpdLeadUpdate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/btnUpdLeadUpdate"
            android:onClick="updateLead"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorPrimary"
            android:layout_marginTop="20dp"
            android:textColor="#FFFFFF"/>
    </LinearLayout>
    </ScrollView>

</LinearLayout>